# Simulation-Framework-for-Adaptive-Motor-Imagery-Classification-with-Longitudinal-Recovery-Tracking

./: .dockerignore  .env.example  .gitignore  1.ipynb  NeuroDrift_Project_Specification.docx  README.md  app.ipynb  corruption_engine.py  degradation_model.py  docker-compose.yml  feature_extractor.py  prefect.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  train.yml
docker/: .dockerignore  Dockerfile.api  Dockerfile.prefect
docs/: PIPELINE_GUIDE.md
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/lib/: apiClient.ts  mockData.ts
frontend/src/state/: sessionStore.tsx
frontend/src/types/: api.ts
notebooks/: 1.ipynb
reports/: architecture.md  methodology.md
scripts/: seed_artifacts.py  train_all.py
src/neurodrift/: __init__.py  config.py
src/neurodrift.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/neurodrift/api/: __init__.py  deps.py  main.py  schemas.py
src/neurodrift/api/routers/: analyze.py  calibrate.py  eval.py  (+2 more)
src/neurodrift/data/: __init__.py  ingest.py  splits.py  synthetic.py
src/neurodrift/features/: __init__.py  extractors.py
src/neurodrift/flows/: __init__.py  notify.py  training_flow.py
src/neurodrift/inference/: __init__.py  engine.py
src/neurodrift/models/: __init__.py  acceptance.py  classifier.py  clustering.py  regressor.py
src/neurodrift/observability/: __init__.py  logging.py  metrics.py
src/neurodrift/registry/: __init__.py  store.py
src/neurodrift/testing/: __init__.py  data_validation.py  drift.py  model_validation.py
tests/: conftest.py  test_acceptance_model.py  test_api.py  test_data_quality.py  test_engine.py  test_features.py  test_model_quality.py
(+1 files in other folders)
