[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurodrift"
version = "0.1.0"
description = "NeuroDrift: end-to-end MLOps pipeline for motor-imagery BCI (Healthcare domain)"
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [{name = "NeuroDrift Team"}]
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24,<2.0",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3,<1.6",
    "mne>=1.5",
    "moabb>=1.0",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "python-multipart>=0.0.9",
    "prefect>=2.18,<3.0",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "deepchecks>=0.18",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["neurodrift*"]

[tool.setuptools.package-data]
neurodrift = ["py.typed"]

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008", "B904", "B905", "I001"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"tests/conftest.py" = ["E402"]
"tests/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring external resources",
]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false
